--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "redux": "3.7.2",
     "redux-throttle": "0.1.1",
     "scratch-audio": "0.1.0-prerelease.20200528195344",
-    "scratch-blocks": "github:YOYITsM3M8/scratch-blocks#develop",
+    "scratch-blocks": "0.1.0-prerelease.20201026031642",
     "scratch-l10n": "3.10.20201027030733",
     "scratch-storage": "1.3.3",
-    "scratch-vm": "github:YOYITsM3M8/scratch-vm#develop",
+    "scratch-vm": "0.2.0-prerelease.20201016122132",
     "scratch-paint": "0.2.0-prerelease.20201020103914",
     "scratch-render": "0.1.0-prerelease.20201020104037",
     "scratch-svg-renderer": "0.2.0-prerelease.20201019174008",
